--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.7",
+    "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.475.0",
