--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
     "otp-generator": "^4.0.1",
-    "paypal-rest-sdk": "^1.8.1"
+    "paypal-rest-sdk": "^1.8.1",
+    "slugify": "^1.6.6"
   }
 }
